# ipc-tests

./: Cargo.toml  README.md
examples/json_pkexec/: Cargo.toml
examples/json_pkexec/src/: api.rs  client.rs  lib.rs  main.rs  server.rs
privileged-ipc/: Cargo.toml
privileged-ipc/src/: api.rs  client.rs  lib.rs  main.rs  moss_service.rs
src/: lib.rs  main.rs  moss_service.rs  server.rs
tools-api/: Cargo.toml
tools-api/src/: lib.rs  moss.rs
