[package]
name = "ipc-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
command-fds = { version = "0.3.0", features = ["tokio"] }
nix = { version = "0.29.0", features = ["fs", "user"] }
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4"] }
