[package]
name = "ipc-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored_json = "5.0.0"
command-fds = { version = "0.3.0" }
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "user", "process"] }
pretty_env_logger = "0.5.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4"] }
