[workspace]
members = ["privileged-ipc"]
default-members = [
    "privileged-ipc"
]
resolver = "2"

[workspace.dependencies]
command-fds = { version = "0.3.0" }
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "user", "process"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4"] }
