[package]
name = "privileged-ipc"
version = "0.1.0"
edition = "2021"
description = "Secure IPC socket mechanism for launching privileged processes"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored_json = "5.0.0"
pretty_env_logger = "0.5.0"

command-fds = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["fs", "user", "process"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
