[package]
name = "privileged-ipc"
version = "0.1.0"
edition = "2021"
description = "Secure IPC socket mechanism for launching privileged processes"
license = "MPL-2.0"

[dependencies]
command-fds = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["fs", "user", "process"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
