[package]
name = "json_pkexec"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored_json = "5.0.0"
log.workspace = true
nix.workspace = true
pretty_env_logger = "0.5.0"
privileged-ipc = { path = "../../privileged-ipc" }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
